# Custom-Distributed-Event-Broker

./: .gitignore  README.md  pyproject.toml
deb/: __init__.py  cli.py
deb/broker/: offset_manager.py  server.py
deb/client/: consumer.py  producer.py
deb/failover/: failover.py
deb/log/: commit_log.py
deb/protocol/: frame.py
tests/: test_e2e.py
