[project]
name = "deb"
version = "1.0.0"
description = "Custom Distributed Event Broker — minimal Kafka-like message broker"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
deb = "deb.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["deb*"]
